[project]
name = "qwe-aigc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich>=0.9.2",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "tortoise>=0.1.1",
]


[tool.uv.sources]
# 设置默认源
default = { url = "https://pypi.tuna.tsinghua.edu.cn/simple" }

[tool.aerich]
tortoise_orm = "config.DB_CONFIG"
location = "./migrations"
src_folder = "./."
